src/objects/CatereaseRoomStaging__c.object
<CustomObject>
    <description>Object that holds the Venue data from Caterease DB</description>
    <fields>
        <fullName>EventStagingID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EventStagingID</label>
        <referenceTo>CatereaseEventStaging__c</referenceTo>
        <relationshipLabel>Caterease Rooms Staging</relationshipLabel>
        <relationshipName>CatereaseRoomsStaging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EvtNum__c</fullName>
        <label>EvtNum</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FromTime__c</fullName>
        <label>From Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <label>LocationName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RmNum__c</fullName>
        <label>RmNum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNumber__c</fullName>
        <formula>TEXT(VALUE(RmNum__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoomNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ToTime__c</fullName>
        <label>To Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>processdate__c</fullName>
        <label>process date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>processmessage__c</fullName>
        <label>process message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>processstate__c</fullName>
        <label>process state</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Caterease Room - Staging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caterease Rooms - Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>